Sat Jul 16 17:51:05 MST 2005  Scott Harris <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        
          Make samples replaced in the subscriber's instance queue delete as
          well as free the sample.
          
        * dds/DCPS/ReceivedDataElementList.inl:
        
          Added a comment about the ReceivedDataElement destructor
          needing to destroy its InstanceState. But it currently 
          causes troubles.
          
        * performance-tests/DCPS/TCPListenerTest/run_test.pl:
        
          Change the number of samples from 80,000 to 20,000.

Fri Jul 15 16:01:19 MST 2005  Scott Harris <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        
          Added Paul C's changes to free read elements in the subscriber
          side instance queue that are being replaced by the recieved
          samples.  It still leaks the if the sample contains a type
          that requires freeing the fields individiually (like sequences).

        * performance-tests/DCPS/TCPListenerTest/run_test.pl:
        
          Changed this test to just have MAX_SAMPLES and 
          MAX_SAMPLES_PER_INSTANCE set to the number that will be in
          the instance queue plus some for good measure.
          Previously it would set MAX_SAMPLES and PER_INSTANCE to
          the number of expected samples.

Thu Jul 14 12:39:15 MST 2005  Scott Harris <harris_s@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Changed reference_to_servant template to not remove
          a reference to the servant because POA::reference_to_servant
          changed in TAO 1.4a (and 1.4.x) to not increment
          the reference count.

Wed Jul 13 14:03:47 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dcps.mpb:
        * dds/DdsDcps.mpc:

          Removing checks for the Dcps in the TAO_ORBSVCS list.

Wed Jul 13 10:48:01 MST 2005  Trevor Fields  <fields_t@ociweb.com>
        * dds/DCPS/Service_Participant.h:
