@@ -1,3 +1,10 @@
+Mon Jul 18 06:43:11 MST 2005  Scott Harris <harris_s@ociweb.com>
+
+        * dds/DCPS/Service_Participant.h:
+
+          Backed out the change of Thu Jul 14 12:39:15 MST 2005
+          because reference_to_servant was fixed in 1.4a_p4.
+
 Sat Jul 16 17:51:05 MST 2005  Scott Harris <harris_s@ociweb.com>
 
         * bin/DCPS/CPPTemplate.pm:
